app/public/stylesheets/style.less
body {
    padding: 0;
    margin: 0;
    background: blue;
    color: white;
    font-family: 'Roboto', sans-serif;
    overflow: hidden;
    min-height: 1080px;
    min-width: 1080px;
    overflow: scroll;
}

.page {
    margin: 0;
    padding: 0;
    height: 1080px;
    width: 1920px;
    background: red;
    position: fixed;
    top: 0;
    left: 0;
}

a {
    color: #00B7FF;
}

p {
    color: white;
}

ul {
  list-style-type: none;
  padding:0;
  li{
    font-size:20px;
    font-weight:bold;
  }
}

.container {
    background-color: #151b26;
    position: absolute;
    padding: 0;
    margin: 0;
    color: #9ca6af;
    padding: 12px;

    &.balances {
        h1{
            margin-top:4px;
            margin-bottom:4px;
        }
        left: 0;
        top: 0;
        right: 1420px;
        bottom: 0;
        font-size: 21px;
        font-weight: bold;

        .up{
            color:#00a300;
        }

        .down{
            color:#BC0A0A;
        }
        padding-right:0;
    }
    &.totals {
        left: 500px;
        top: 0;
        bottom: 880px;
        right: 300px;
        text-align: center;

        h1 {
            font-size: 36px;
        }

        .totals-info {
            font-size: 50px;
            font-weight: bold;
            .total-change{
                font-size:20px;
                position: relative;
                bottom: 20px;
            }
        }

        &.profit {
            background-color: #00a300;
            color: black;
        }
        &.loss {
            background-color: #BC0A0A;
        }
    }
    &.timer {
        top: 0;
        bottom: 880px;
        right: 0;
        left: 1620px;
        text-align: center;
        font-size: 36px;
        padding-top: 64px;
        .round-time{
            font-size:66px;
        }
    }
    &.feature {
        top: 200px;
        bottom: 200px;
        left: 500px;
        right: 300px;
        background-color: #494949;
        color:white;
        text-align:center;
        font-size:72px;
        padding-top: 100px;
        .btc-price-label{

        }
        .btc-price-now{
            &.up{
                color:#00a300;
            }

            &.down{
                color:#BC0A0A;
            }
        }
        .last-winner-label{
            margin-top:34px;
        }
        .last-winner-info{

        }
    }
    &.meta {
        top: 880px;
        bottom: 0;
        left: 500px;
        right: 300px;
        font-size: 25px;

        .btc-qr {
            top: 0;
            position: absolute;
            right: 0;
            max-height: 180px;
        }
    }
    &.vote-totals {
        top: 200px;
        bottom: 400px;
        left: 1620px;
        right: 0;
        .vote-totals-label{
            text-align: center;
        }
    }
    &.vote-history {
        top: 680px;
        bottom: 0;
        left: 1620px;
        right: 0;
        .vote-history-label{
            text-align: center;
        }
    }
}

